fix: footer text alignment and navbar position

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
     align-items: center;
     background: var(--main-gradient);
     border-radius: 30px;
-    bottom: 5%;
+    bottom: 7%;
     display: flex;
     height: 60px;
     justify-content: space-evenly;
